security_groups.tf
resource "aws_security_group" "allow_all" {
  vpc_id = "${aws_vpc.main.id}"
  # vpc_id = "vpc-ba17dfc0"
  name        = "allow_all"
  description = "Allow all inbound traffic"

  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
tags {
    Name = "allow-ssh"
  }
}
